Try background shift fix for mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,8 +7,9 @@
 @use "responsive";
 
 html {
-    background: url(../img/PolygonalBackground.svg) center/cover no-repeat fixed, #000000;
-    min-height: 100%;
+    background: url(../img/PolygonalBackground.svg) center/cover no-repeat fixed, darken($blue-green, 10%);
+    height: -webkit-fill-available;
+    height: 100%;
 }
 
 body {
